# opencl-sandbox

./: CMakeLists.txt
cl/: gaussian_blur.cl
cmake/: FindComputeCpp.cmake
src/: main.cpp
